[package]
name = "queued-task"
version = "0.1.4"
edition = "2021"

rust-version = "1.70"
authors = ["siven <sivenzheng@gmail.com>"]
description = """
concurrent queue task processing
"""
readme = "README.MD"
keywords = [
    "task",
    "async",
    "queue",
    "concurrent",
]
license = "MIT"
repository = "https://github.com/zhengxiwan/queued-task-rs"


[dependencies]
#derive_builder = "0.20.0"
#tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
